@@ -1,5 +1,6 @@
 === ongoing ===
 
+- Added display type choices for event plugin
 
 === 0.6.3 ===
 
